fix wrong pr branch